web-infras/parser/tests/fixtures/esprima/es2017/trailing-commas/invalid-empty-call/output.txt
[SyntaxError]: Unexpect trailing comma. (1,3)
1|f(,);
 | ^
